[project]
name = "reinforcement_learning_sandbox"
version = "0.1.0"
description = "Reinforcement Learning Sandbox"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    { name = "" }
]

dependencies = [
    "gymnasium[toy-text]>=1.2.3",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
package = true
 
